<resources>
    <string name="app_name">SoundPool</string>
    <string name="sound_1">Sound 1</string>
    <string name="sound_2">Sound 2</string>
    <string name="sound_3">Sound 3</string>
    <string name="sound_4">Sound 4</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="enter_text">Enter Text</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
</resources>
